--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <link rel="preload" as="font" href="assets/lato.woff2" type="font/woff2" crossorigin="anonymous">
-    <script src="vendors/react-with-dom.js"></script>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<script src="scripts.js"></script>
 
 <header class="header">
     <a href="/" class="header__logo" aria-label="Яндекс.Дом"></a>
@@ -53,9 +50,9 @@
                             <span class="a11y-hidden">°</span>
 
                             <div
-                                class="hero-dashboard__icon hero-dashboard__icon_rain"
-                                role="img"
-                                aria-label="Дождь"
+                                    class="hero-dashboard__icon hero-dashboard__icon_rain"
+                                    role="img"
+                                    aria-label="Дождь"
                             ></div>
                         </div>
                     </li>
@@ -140,15 +137,26 @@
             </select>
 
             <ul role="tablist" class="section__tabs">
-                <li role="tab" aria-selected="true" tabindex="0" class="section__tab section__tab_active" id="tab_all" aria-controls="panel_all" data-id="all">Все</li>
-                <li role="tab" aria-selected="false" class="section__tab" id="tab_kitchen" aria-controls="panel_kitchen" data-id="kitchen">Кухня</li>
-                <li role="tab" aria-selected="false" class="section__tab" id="tab_hall" aria-controls="panel_hall" data-id="hall">Зал</li>
-                <li role="tab" aria-selected="false" class="section__tab" id="tab_lights" aria-controls="panel_lights" data-id="lights">Лампочки</li>
-                <li role="tab" aria-selected="false" class="section__tab" id="tab_cameras" aria-controls="panel_cameras" data-id="cameras">Камеры</li>
+                <li role="tab" aria-selected="true" tabindex="0" class="section__tab section__tab_active" id="tab_all"
+                    aria-controls="panel_all" data-id="all">Все
+                </li>
+                <li role="tab" aria-selected="false" class="section__tab" id="tab_kitchen" aria-controls="panel_kitchen"
+                    data-id="kitchen">Кухня
+                </li>
+                <li role="tab" aria-selected="false" class="section__tab" id="tab_hall" aria-controls="panel_hall"
+                    data-id="hall">Зал
+                </li>
+                <li role="tab" aria-selected="false" class="section__tab" id="tab_lights" aria-controls="panel_lights"
+                    data-id="lights">Лампочки
+                </li>
+                <li role="tab" aria-selected="false" class="section__tab" id="tab_cameras" aria-controls="panel_cameras"
+                    data-id="cameras">Камеры
+                </li>
             </ul>
         </div>
 
-        <div role="tabpanel" class="section__panel" aria-hidden="false" id="panel_all" aria-labelledby="tab_all" data-id="all">
+        <div role="tabpanel" class="section__panel" aria-hidden="false" id="panel_all" aria-labelledby="tab_all"
+             data-id="all">
             <ul class="section__panel-list">
                 <li class="event">
                     <button class="event__button">
@@ -202,7 +210,8 @@
             </ul>
         </div>
 
-        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_kitchen" aria-labelledby="tab_kitchen" data-id="kitchen">
+        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_kitchen"
+             aria-labelledby="tab_kitchen" data-id="kitchen">
             <ul class="section__panel-list">
                 <li class="event">
                     <button class="event__button">
@@ -221,7 +230,8 @@
             </ul>
         </div>
 
-        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_hall" aria-labelledby="tab_hall" data-id="hall">
+        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_hall"
+             aria-labelledby="tab_hall" data-id="hall">
             <ul class="section__panel-list">
                 <li class="event">
                     <button class="event__button">
@@ -240,7 +250,8 @@
             </ul>
         </div>
 
-        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_lights" aria-labelledby="tab_lights" data-id="lights">
+        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_lights"
+             aria-labelledby="tab_lights" data-id="lights">
             <ul class="section__panel-list">
                 <li class="event">
                     <button class="event__button">
@@ -273,7 +284,8 @@
             </ul>
         </div>
 
-        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_cameras" aria-labelledby="tab_cameras" data-id="cameras">
+        <div role="tabpanel" class="section__panel section__panel_hidden" aria-hidden="true" id="panel_cameras"
+             aria-labelledby="tab_cameras" data-id="cameras">
             <ul class="section__panel-list">
                 <li class="event">
                     <button class="event__button">
@@ -307,6 +319,6 @@
         © 1997–2022 ООО «Яндекс»
     </div>
 </footer>
-
+<script defer src="scripts.js"></script>
 </body>
 </html>
