--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
+    <link rel="preload" as="image" href="assets/arrow-down.svg">
+    <link rel="preload" as="image" href="assets/icon_list_m@1x.svg">
+    <link rel="preload" as="image" href="assets/icon_scheduled.svg">
+    <link rel="preload" as="image" href="assets/icon_sun.svg">
+    <link rel="preload" as="image" href="assets/icon_sun_2.svg">
+    <link rel="preload" as="image" href="assets/icon_temperature.svg">
+    <link rel="preload" as="image" href="assets/icon_temperature_2.svg">
     <link rel="preload" as="image" href="assets/logo.svg">
     <link rel="preload" as="image" href="assets/bg@2x.png">
     <link rel="preload" as="image" href="assets/cloud-drizzle.svg">
